k8s/k8s/account-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: account-service
  namespace: banking-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: account-service

  template:
    metadata:
      labels:
        app: account-service

    spec:
      containers:
      - name: account-service
        image: pramay11/account-service:v1

        ports:
        - containerPort: 8081
