k8s/k8s/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-gateway
  namespace: banking-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: api-gateway

  template:
    metadata:
      labels:
        app: api-gateway

    spec:
      containers:
      - name: api-gateway
        image: pramay11/api-gateway:v1

        ports:
        - containerPort: 8085
