k8s/k8s/loan-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: loan-service
  namespace: banking-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: loan-service

  template:
    metadata:
      labels:
        app: loan-service

    spec:
      containers:
      - name: loan-service
        image: pramay11/loan-service:v1

        ports:
        - containerPort: 8083
