k8s/k8s/transaction-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: transaction-service
  namespace: banking-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: transaction-service

  template:
    metadata:
      labels:
        app: transaction-service

    spec:
      containers:
      - name: transaction-service
        image: pramay11/transaction-service:v1

        ports:
        - containerPort: 8084
