k8s/k8s/customer-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: customer-service
  namespace: banking-app

spec:
  selector:
    app: customer-service

  ports:
  - port: 8082
    targetPort: 8082

  type: ClusterIP
