k8s/k8s/discovery-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: discovery-server
  namespace: banking-app

spec:
  selector:
    app: discovery-server

  ports:
  - port: 8761
    targetPort: 8761

  type: ClusterIP
