k8s/k8s/loan-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: loan-service
  namespace: banking-app

spec:
  selector:
    app: loan-service

  ports:
  - port: 8083
    targetPort: 8083

  type: ClusterIP
