k8s/k8s/transaction-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: transaction-service
  namespace: banking-app

spec:
  selector:
    app: transaction-service

  ports:
  - port: 8084
    targetPort: 8084

  type: ClusterIP
